@@ -8,9 +8,9 @@ gem 'sqlite3',                  :platforms => [:mswin, :mingw]
 gem 'mongrel', '>= 1.2.0.pre2', :platforms => [:mswin, :mingw]
 
 # Gems used by project
-gem 'contour'                      # Basic Layout and Assets
-gem 'devise', '~> 1.4.4'           # User Authorization
-gem 'omniauth', '0.2.6'            # User Multi-Authentication
+gem 'contour', '~> 0.4.0'          # Basic Layout and Assets
+gem 'devise',  '~> 1.4.4'          # User Authorization
+gem 'omniauth',   '0.2.6'          # User Multi-Authentication
 gem 'kaminari'                     # Pagination
 gem 'mail'                         # Emails
 
